update user model
added attribute role instead of isAdmin

--- a/backend/todo.txt
+++ b/backend/todo.txt
@@ -1,6 +1,6 @@
 
 @everyone:
-
+    - add roles to database
     - add models (classes metiers)
      
     - Authentication (login, register, logout)
