--- a/backend/todo.txt
+++ b/backend/todo.txt
@@ -8,7 +8,7 @@
     - Add database classes
 
 
-
+- add link in error
 
 
 - structure the project in a way that it is extendable and easy to maintain
